--- a/manifest_dev.yml
+++ b/manifest_dev.yml
@@ -1,22 +1,25 @@
 ---
-stack: cflinuxfs3
-buildpack: python_buildpack
-command: python manage.py migrate --fake-initial && gunicorn -k gevent -w 2 --bind=0.0.0.0:$PORT fec_eregs.wsgi:application
-services:
-  - fec-eregs-creds # Must provide HTTP_AUTH_USER, HTTP_AUTH_PASSWORD
-  - fec-eregs-db-rdn
-  - fec-creds-dev
-env:
-  DJANGO_SETTINGS_MODULE: fec_eregs.settings.prod
-  FEC_API_VERSION: v1
-  SCRIPT_NAME: /regulations
-  WEB_CONCURRENCY: 4
-  FEC_API_URL: https://fec-dev-api.app.cloud.gov
-  FEC_CMS_URL: "https://fec-dev-proxy.app.cloud.gov"
-  FEC_WEB_URL: "/data"
-  APP_NAME: fec | dev | eregs
 applications:
   - name: eregs
+    instances: 1
     memory: 512M
+    disk_quota: 1G
     routes:
     - route: fec-dev-eregs.app.cloud.gov
+    stack: cflinuxfs3
+    buildpacks:
+      - python_buildpack
+    command: python manage.py migrate --fake-initial && gunicorn -k gevent -w 2 --bind=0.0.0.0:$PORT fec_eregs.wsgi:application
+    services:
+      - fec-eregs-creds # Must provide HTTP_AUTH_USER, HTTP_AUTH_PASSWORD
+      - fec-eregs-db-rdn
+      - fec-creds-dev
+    env:
+      DJANGO_SETTINGS_MODULE: fec_eregs.settings.prod
+      FEC_API_VERSION: v1
+      SCRIPT_NAME: /regulations
+      WEB_CONCURRENCY: 4
+      FEC_API_URL: https://fec-dev-api.app.cloud.gov
+      FEC_CMS_URL: "https://fec-dev-proxy.app.cloud.gov"
+      FEC_WEB_URL: "/data"
+      APP_NAME: fec | dev | eregs
