--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # regulations-core
-django==2.2.24
+django==3.1.14
 cached_property==1.3.1
 django-mptt==0.13.4
 anyjson==0.3.3
@@ -7,7 +7,7 @@ jsonschema==2.5.1
 six==1.11.0
 webargs==6.0.0
 pyelasticsearch==1.4
-django-haystack==2.4.1
+django-haystack==3.1.1
 psycopg2==2.7.3.2
 
 # regulations-site
@@ -34,7 +34,7 @@ greenlet==0.4.16 # pinned to fix build problem (parent gevent)
 -e eregs_extensions/
 
 # regparser
--e git+https://github.com/fecgov/regulations-parser.git@master#egg=regparser
+-e git+https://github.com/fecgov/regulations-parser.git@pkfec-django3-parser#egg=regparser
 
 # regsite
 -e git+git://github.com/fecgov/regulations-site@master#egg=regulations
