--- a/requirements-parsing.txt
+++ b/requirements-parsing.txt
@@ -21,7 +21,7 @@ coloredlogs==9.0
 cryptography==3.3.2
 decorator==4.2.1
 dj-database-url==0.4.2
-django==3.2.10
+django==3.2.12
 django-click==2.3.0
 django-haystack==3.1.1
 django-js-asset==1.0.0
@@ -34,7 +34,7 @@ enum34==1.1.6
 furl==1.0.1
 futures==3.1.1
 gitdb2==2.0.3
-GitPython==2.1.8
+GitPython==3.1.27
 gevent==1.4.0
 greenlet==0.4.16 # pinned to fix build problem (parent is gevent)
 gunicorn==19.10.0
@@ -73,15 +73,15 @@ pytz==2021.3
 PyYAML==5.4
 redis==3.1.0
 # regparser
--e git+https://github.com/fecgov/regulations-parser.git@master#egg=regparser
+-e git+https://github.com/fecgov/regulations-parser.git@upgrade-django-v3.2.12-parser#egg=regparser
 
 # regsite
--e git+git://github.com/fecgov/regulations-site@master#egg=regulations
+-e git+git://github.com/fecgov/regulations-site@upgrade-django-v3.2.12-site#egg=regulations
 
 # regcore
--e git+git://github.com/fecgov/regulations-core@master#egg=regcore
+-e git+git://github.com/fecgov/regulations-core@upgrade-django-v3.2.12-core#egg=regcore
 requests==2.25.1
-requests-cache==0.4.13
+requests-cache==0.6.3
 requests-toolbelt==0.8.0
 roman==2.0.0
 rq==1.3.0
