--- a/requirements-parsing.txt
+++ b/requirements-parsing.txt
@@ -1,11 +1,8 @@
-# only tested with Python 3.6.1--recommend using that version until
-# further notice.
-
 amqp==5.0.9
 anyjson==0.3.3
 appnope==0.1.0
 asn1crypto==0.24.0
-attrs==17.4.0
+attrs==18.2.0
 bandit==1.4.0
 billiard==3.6.4.0
 boto3==1.5.13
@@ -43,7 +40,7 @@ idna==2.6
 inflection==0.3.1
 invoke==0.22.0
 ipdb==0.13.2
-ipython==6.2.1
+ipython==7.16.3
 ipython-genutils==0.2.0
 jedi==0.11.1
 jmespath==0.9.3
@@ -59,7 +56,7 @@ parso==0.1.1
 pbr==4.0.0
 pexpect==4.4.0
 pickleshare==0.7.4
-prompt-toolkit==1.0.15
+prompt-toolkit==3.0.28
 psycopg2==2.7.3.2
 ptyprocess==0.5.2
 pycparser==2.18
@@ -73,13 +70,13 @@ pytz==2021.3
 PyYAML==5.4
 redis==3.1.0
 # regparser
--e git+https://github.com/fecgov/regulations-parser.git@upgrade-django-v3.2.12-parser#egg=regparser
+-e git+https://github.com/fecgov/regulations-parser.git@master#egg=regparser
 
 # regsite
--e git+git://github.com/fecgov/regulations-site@upgrade-django-v3.2.12-site#egg=regulations
+-e git+git://github.com/fecgov/regulations-site@master#egg=regulations
 
 # regcore
--e git+git://github.com/fecgov/regulations-core@upgrade-django-v3.2.12-core#egg=regcore
+-e git+git://github.com/fecgov/regulations-core@master#egg=regcore
 requests==2.25.1
 requests-cache==0.6.3
 requests-toolbelt==0.8.0
