--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,11 @@
 # Python CircleCI 2.0 configuration file
-# Check https://circleci.com/docs/2.0/language-python/ for more details
+# Check https://circleci.com/developer/images/image/cimg/python for more details
 version: 2.1
 jobs:
   build:
     docker:
       # CircleCI maintains a library of pre-built images documented at
-      # https://circleci.com/docs/2.0/circleci-images/
+      # https://circleci.com/developer/images
       # use `-browsers` prefix for selenium tests, e.g. `<image_name>-browsers`
 
       - image: cimg/python:3.8
