--- a/requirements-parsing.txt
+++ b/requirements-parsing.txt
@@ -7,8 +7,8 @@ billiard==3.6.4.0
 boto3==1.5.13
 botocore==1.8.50
 cached-property==1.3.1
-celery==5.2.3
-certifi==2018.1.18
+celery==5.2.7
+certifi==2022.12.7
 cfenv==0.5.3
 cffi==1.15.0
 chardet==3.0.4
@@ -31,16 +31,16 @@ furl==1.0.1
 futures==3.1.1
 gitdb2==2.0.3
 GitPython==3.1.27
-gevent==21.12.0
+gevent==22.10.2
 gunicorn==19.10.0
 humanfriendly==4.9
 idna==2.6
 inflection==0.3.1
 invoke==0.22.0
 ipdb==0.13.2
-ipython==7.16.3
+ipython==8.7.0
 ipython-genutils==0.2.0
-jedi==0.11.1
+jedi==0.18.2
 jmespath==0.9.3
 json-delta==2.0
 jsonschema==2.5.1
@@ -50,7 +50,7 @@ marshmallow==2.19.2
 networkx==2.6.3
 newrelic==2.100.0.84
 orderedmultidict==0.7.11
-parso==0.1.1
+parso==0.8.3
 pbr==4.0.0
 pexpect==4.4.0
 pickleshare==0.7.4
@@ -80,6 +80,7 @@ requests-cache==0.6.3
 requests-toolbelt==0.8.0
 roman==2.0.0
 rq==1.3.0
+setuptools==65.6.3
 s3transfer==0.1.13
 simplegeneric==0.8.1
 simplejson==3.13.2
@@ -87,7 +88,7 @@ six==1.11.0
 smmap2==2.0.3
 sqlparse==0.4.2
 stevedore==1.28.0
-traitlets==4.3.2
+traitlets==5.7.0
 urllib3==1.26.7
 vine==5.0.0
 wcwidth==0.1.7
