--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # regulations-core
-django==3.2.19
+django==3.2.20
 cached_property==1.3.1
 django-mptt==0.13.4
 jsonschema==2.5.1
@@ -32,7 +32,7 @@ gevent==22.10.2
 -e eregs_extensions/
 
 # regparser
--e git+https://github.com/fecgov/regulations-parser.git@master#egg=regparser
+-e git+https://github.com/fecgov/regulations-parser@master#egg=regparser
 
 # regsite
 -e git+https://github.com/fecgov/regulations-site@master#egg=regulations
